Finnish overall style for project card, add natours card

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   <div class="aboutme__intro">
     <h3 class="heading-2 heading-2--dark">About Me</h3>
     <p class="aboutme__intro__text">
-      Hi there! I'm Nam Nguyen from Toronton, Canada. I'm currently pursuing my B.Sc. in Computer Science at York Universy
+      Hi there! I'm Nam Nguyen from Toronton, Canada. I'm currently pursuing my B.Sc. in Computer Science at York
+      Universy
       as
       a full-time student. As a developer, I enjoy doing research on my own, solving new challenges and learning new
       technologies.
@@ -137,11 +138,201 @@
         GIT & GITHUB
       </p>
     </div>
-
   </section>
 
   <section class="all-projects">
-    All projects
+    <h1 class="all-projects__heading">Projects Portfolio</h1>
+    <div class="projects">
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--natour">
+            &nbsp;
+          </div>
+          <h4 class="card__heading">
+            <span class="card__heading-span card__heading-span--natour">Natour Travel Website</span>
+          </h4>
+          <div class="card__details">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>SASS</li>
+              <li>BOOTSTRAP</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card__side card__side--back card__side--back-natour">
+          <div class="card__cta">
+            <div class="card__price-box">
+              <p class="card__price-only">A simple Travel Website built with HTML and CSS.</p>
+              <a href="http://www.udemynatoursproject.esy.es" class="card__price-value card__price-value-natour">View Site</a>
+            </div>
+            <a href="#popup" class="btn btn--white">Demo</a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--natour">
+            &nbsp;
+          </div>
+          <h4 class="card__heading">
+            <span class="card__heading-span card__heading-span--natour">Natour Travel Website</span>
+          </h4>
+          <div class="card__details">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>SASS</li>
+              <li>BOOTSTRAP</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card__side card__side--back card__side--back-natour">
+          <div class="card__cta">
+            <div class="card__price-box">
+              <p class="card__price-only">A simple Travel Website built with HTML and CSS.</p>
+              <a href="http://www.udemynatoursproject.esy.es" class="card__price-value">View Site</a>
+            </div>
+            <a href="#popup" class="btn btn--white">Demo</a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--natour">
+            &nbsp;
+          </div>
+          <h4 class="card__heading">
+            <span class="card__heading-span card__heading-span--natour">Natour Travel Website</span>
+          </h4>
+          <div class="card__details">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>SASS</li>
+              <li>BOOTSTRAP</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card__side card__side--back card__side--back-natour">
+          <div class="card__cta">
+            <div class="card__price-box">
+              <p class="card__price-only">A simple Travel Website built with HTML and CSS.</p>
+              <a href="http://www.udemynatoursproject.esy.es" class="card__price-value">View Site</a>
+            </div>
+            <a href="#popup" class="btn btn--white">Demo</a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--natour">
+            &nbsp;
+          </div>
+          <h4 class="card__heading">
+            <span class="card__heading-span card__heading-span--natour">Natour Travel Website</span>
+          </h4>
+          <div class="card__details">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>SASS</li>
+              <li>BOOTSTRAP</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card__side card__side--back card__side--back-natour">
+          <div class="card__cta">
+            <div class="card__price-box">
+              <p class="card__price-only">A simple Travel Website built with HTML and CSS.</p>
+              <a href="http://www.udemynatoursproject.esy.es" class="card__price-value">View Site</a>
+            </div>
+            <a href="#popup" class="btn btn--white">Demo</a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--natour">
+            &nbsp;
+          </div>
+          <h4 class="card__heading">
+            <span class="card__heading-span card__heading-span--natour">Natour Travel Website</span>
+          </h4>
+          <div class="card__details">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>SASS</li>
+              <li>BOOTSTRAP</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card__side card__side--back card__side--back-natour">
+          <div class="card__cta">
+            <div class="card__price-box">
+              <p class="card__price-only">A simple Travel Website built with HTML and CSS.</p>
+              <a href="http://www.udemynatoursproject.esy.es" class="card__price-value">View Site</a>
+            </div>
+            <a href="#popup" class="btn btn--white">Demo</a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--natour">
+            &nbsp;
+          </div>
+          <h4 class="card__heading">
+            <span class="card__heading-span card__heading-span--natour">Natour Travel Website</span>
+          </h4>
+          <div class="card__details">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>SASS</li>
+              <li>BOOTSTRAP</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card__side card__side--back card__side--back-natour">
+          <div class="card__cta">
+            <div class="card__price-box">
+              <p class="card__price-only">A simple Travel Website built with HTML and CSS.</p>
+              <a href="http://www.udemynatoursproject.esy.es" class="card__price-value">View Site</a>
+            </div>
+            <a href="#popup" class="btn btn--white">Demo</a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--natour">
+            &nbsp;
+          </div>
+          <h4 class="card__heading">
+            <span class="card__heading-span card__heading-span--natour">Natour Travel Website</span>
+          </h4>
+          <div class="card__details">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>SASS</li>
+              <li>BOOTSTRAP</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card__side card__side--back card__side--back-natour">
+          <div class="card__cta">
+            <div class="card__price-box">
+              <p class="card__price-only">A simple Travel Website built with HTML and CSS.</p>
+              <a href="http://www.udemynatoursproject.esy.es" class="card__price-value">View Site</a>
+            </div>
+            <a href="#popup" class="btn btn--white">Demo</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <footer class="footer">
