Partially implement the header and top 3 project section. Small css changes

--- a/index.html
+++ b/index.html
@@ -23,13 +23,33 @@
   </div>
 
   <header class="header">
-    <img src="img/logo-crop.png" alt="Nam Nguyen Logo" class="header__logo">
-    <h1 class="heading-1">Nam Nguyen</h1>
-    <h3 class="heading-3">The Developer | Student | Thinker</h3>
+    <!-- <img src="img/logo-crop.png" alt="Nam Nguyen Logo" class="header__logo"> -->
+    <h1 class="heading-1 heading-1--light">
+      Nam Nguyen The
+      <span class="txt-type" data-wait="3000" data-words='["Developer", "Designer", "Learner"]'></span>
+    </h1>
+    <h2 class="heading-2 heading-2--light">Welcome to my site!</h2>
   </header>
 
   <div class="top-3-projects">
-    Top 3 Projects
+    <h3 class="heading-3 heading-3--dark">Top 3 projects</h3>
+    <div class="top-3-projects__list">
+      <img src="img/natour.jpg" alt="Natours Website Photo" class="top-3-projects__image">
+      <div class="top-3-projects-detail">
+        <h4 class="heading-4 heading-4--light" style="margin: 0;">Natours</h4>
+        <p class="top-3-projects__high-light" style="margin: 0;">Advance CSS</p>
+      </div>
+      <img src="img/natour.jpg" alt="Natours Website Photo" class="top-3-projects__image">
+      <div class="top-3-projects-detail">
+        <h4 class="heading-4 heading-4--light">Natours</h4>
+        <p class="top-3-projects__high-light">Advance CSS</p>
+      </div>
+      <img src="img/natour.jpg" alt="Natours Website Photo" class="top-3-projects__image">
+      <div class="top-3-projects-detail">
+        <h4 class="heading-4 heading-4--light">Natours</h4>
+        <p class="top-3-projects__high-light">Advance CSS</p>
+      </div>
+    </div>
   </div>
 
   <div class="aboutme__intro">
@@ -277,6 +297,9 @@
       &copy; 2020 by Nam Nguyen. All rights reserved. Free to use for learning purposes.
     </p>
   </footer>
+
+  <!-- Insert JS -->
+  <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
