Adjustment to repsonsive design

--- a/index.html
+++ b/index.html
@@ -14,42 +14,46 @@
   <!-- Insert icon -->
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-  <title>Nam Nguyen &mdash; Dev Profile</title>
+  <title>Nam Nguyen &mdash; Developer Profile</title>
+  <meta name="description"
+    content="Nam Vu Hoang Nguyen is a Full-Stack Web Developer (React, Angular, Node, .Net) in Toronto, Canada. Currently pursuing a B.Sc. in Computer Science at York University.">
+  <meta name="keywords" content="Nam Nguyen, Portfolio, Profile, York University, Student, Full-Stack, Developer, Website, Webapp">
+  <meta name="author" content="Nam Nguyen">
 </head>
 
 <body class="container">
   <nav class="navbar">
     <ul class="navbar__nav">
       <li class="nav-item">
-        <a href="#home" class="nav-link">
+        <a href="#home" title="Home" class="nav-link">
           <i class="fas fa-home fa-fw"></i>
           <span class="link-text">Home</span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a href="#about" class="nav-link">
+        <a href="#about" title="About" class="nav-link">
           <i class="fas fa-user-circle fa-fw"></i>
           <span class="link-text">About</span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a href="#stacks" class="nav-link">
+        <a href="#stacks" title="Stacks" class="nav-link">
           <i class="fas fa-layer-group fa-fw"></i>
           <span class="link-text">Stacks</span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a href="#projects" class="nav-link">
+        <a href="#projects" title="Projects" class="nav-link">
           <i class="fas fa-code fa-fw"></i>
           <span class="link-text">Projects</span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a href="https://github.com/namnguyen191" target="_blank" class="nav-link">
+        <a href="https://github.com/namnguyen191" title="GitHub" target="_blank" class="nav-link">
           <i class="fab fa-github fa-fw"></i>
           <span class="link-text">Github</span>
         </a>
@@ -107,24 +111,24 @@
   <div class="aboutme__contact-info">
     <h3 class="heading-2 heading-2--dark">Contact Me At:</h3>
     <div class="aboutme__contact-info__section">
-      <a href="https://www.linkedin.com/in/nguyen-vu-hoang-nam-865226132" target="_blank"><img
+      <a href="https://www.linkedin.com/in/nguyen-vu-hoang-nam-865226132" title="LinkedIn" target="_blank"><img
           src="img/svg/linkedin.svg" alt="LinkedIn Icon" class="aboutme__contact-info__icon"></a>
-      <a target="_blank" class="aboutme__contact-info__url"
+      <a target="_blank" class="aboutme__contact-info__url" title="LinkedIn"
         href="https://www.linkedin.com/in/nguyen-vu-hoang-nam-865226132">@LinkedIn: Nam Nguyen</a>
     </div>
     <div class="aboutme__contact-info__section">
-      <a href="mailto:hoangnamnguyen191@gmail.com" target="_blank">
+      <a href="mailto:hoangnamnguyen191@gmail.com" title="Gmail" target="_blank">
         <img src="img/svg/gmail.svg" alt="GMail Icon" class="aboutme__contact-info__icon">
       </a>
-      <a target="_blank" class="aboutme__contact-info__url" href="mailto:hoangnamnguyen191@gmail.com">@GMail:
+      <a target="_blank" class="aboutme__contact-info__url" title="Gmail" href="mailto:hoangnamnguyen191@gmail.com">@GMail:
         hoangnamnguyen191
       </a>
     </div>
     <div class="aboutme__contact-info__section">
-      <a href="https://github.com/namnguyen191" target="_blank">
+      <a href="https://github.com/namnguyen191" title="GitHub" target="_blank">
         <img src="img/svg/github.svg" alt="GitHub Icon" class="aboutme__contact-info__icon">
       </a>
-      <a target="_blank" class="aboutme__contact-info__url" href="https://github.com/namnguyen191">@GitHub:
+      <a target="_blank" class="aboutme__contact-info__url" title="GitHub" href="https://github.com/namnguyen191">@GitHub:
         namnguyen191
       </a>
     </div>
@@ -221,7 +225,7 @@
           <div class="card__cta">
             <div class="card__cta-detail">
               <p class="card__cta-desc">A simple Travel Website built using advance CSS techniques.</p>
-              <a href="http://www.udemynatoursproject.esy.es" class="card__cta-link card__cta-link-natour"
+              <a href="http://www.udemynatoursproject.esy.es" title="Natours" class="card__cta-link card__cta-link-natour"
                 target="_blank">View Site</a>
             </div>
             <a href="#popup" class="btn btn--white">Demo</a>
