--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
   <title>Nam Nguyen &mdash; Developer Profile</title>
   <meta name="description"
     content="Nam Vu Hoang Nguyen is a Full-Stack Web Developer (React, Angular, Node, .Net) in Toronto, Canada. Currently pursuing a B.Sc. in Computer Science at York University.">
-  <meta name="keywords" content="Nam Nguyen, Portfolio, Profile, York University, Student, Full-Stack, Developer, Website, Webapp">
+  <meta name="keywords"
+    content="Nam Nguyen, Portfolio, Profile, York University, Student, Full-Stack, Developer, Website, Webapp">
   <meta name="author" content="Nam Nguyen">
 </head>
 
 <body class="container">
+  <!-- Navbar start -->
   <nav class="navbar">
     <ul class="navbar__nav">
+      <!-- Home nav -->
       <li class="nav-item">
         <a href="#home" title="Home" class="nav-link">
           <i class="fas fa-home fa-fw"></i>
@@ -31,6 +34,7 @@
         </a>
       </li>
 
+      <!-- About nav -->
       <li class="nav-item">
         <a href="#about" title="About" class="nav-link">
           <i class="fas fa-user-circle fa-fw"></i>
@@ -38,6 +42,7 @@
         </a>
       </li>
 
+      <!-- Stacks nav -->
       <li class="nav-item">
         <a href="#stacks" title="Stacks" class="nav-link">
           <i class="fas fa-layer-group fa-fw"></i>
@@ -45,6 +50,7 @@
         </a>
       </li>
 
+      <!-- Projects nav -->
       <li class="nav-item">
         <a href="#projects" title="Projects" class="nav-link">
           <i class="fas fa-code fa-fw"></i>
@@ -52,45 +58,63 @@
         </a>
       </li>
 
+      <!-- GitHub nav -->
       <li class="nav-item">
-        <a href="https://github.com/namnguyen191" title="GitHub" target="_blank" class="nav-link">
+        <a href="https://github.com/namnguyen191" title="GitHub" target="_blank" class="nav-link" rel="noopener">
           <i class="fab fa-github fa-fw"></i>
           <span class="link-text">Github</span>
         </a>
       </li>
     </ul>
   </nav>
+  <!-- Navbar end -->
 
+  <!-- Header start -->
   <header class="header" id="home">
-    <!-- <img src="img/logo-crop.png" alt="Nam Nguyen Logo" class="header__logo"> -->
     <h1 class="heading-1 heading-1--light">
       Nam Nguyen The
       <span class="txt-type" data-wait="3000" data-words='["Developer", "Designer", "Learner"]'></span>
     </h1>
     <h2 class="heading-2 heading-2--light">Welcome to my site!</h2>
   </header>
+  <!-- Header end -->
 
+  <!-- Top 3 Projects start -->
   <div class="top-3-projects">
     <h3 class="heading-3 heading-3--dark">Top 3 projects</h3>
     <div class="top-3-projects__list">
-      <img src="img/natour.jpg" alt="Natours Website Photo" class="top-3-projects__image">
+      <!-- Natour -->
+      <a href="http://www.udemynatoursproject.esy.es/" title="Natours" target="_blank" rel="noopener">
+        <img src="img/natour.webp" alt="Natours Website Photo" class="top-3-projects__image">
+      </a>
       <div class="top-3-projects-detail">
-        <h4 class="heading-4 heading-4--light" style="margin: 0;">Natours</h4>
-        <p class="top-3-projects__high-light" style="margin: 0;">Advance CSS</p>
+        <a href="http://www.udemynatoursproject.esy.es/" class="project-link" target="_blank" rel="noopener">Natours</a>
+        <p class="top-3-projects__high-light">SASS | ADVANCED CSS</p>
       </div>
-      <img src="img/natour.jpg" alt="Natours Website Photo" class="top-3-projects__image">
+
+      <!-- Sirvey -->
+      <a href="https://reactsirvey.herokuapp.com/" title="Sirvey" target="_blank" rel="noopener">
+        <img src="img/survey.webp" alt="Sirvey Website Photo" class="top-3-projects__image">
+      </a>
       <div class="top-3-projects-detail">
-        <h4 class="heading-4 heading-4--light">Natours</h4>
-        <p class="top-3-projects__high-light">Advance CSS</p>
+        <a href="https://reactsirvey.herokuapp.com/" class="project-link" target="_blank" rel="noopener">Sirvey</a>
+        <p class="top-3-projects__high-light">MERN STACK</p>
       </div>
-      <img src="img/natour.jpg" alt="Natours Website Photo" class="top-3-projects__image">
+
+      <!-- DatingApp -->
+      <a href="https://udemydatingapp.azurewebsites.net/" title="Dating App" target="_blank" rel="noopener">
+        <img src="img/dating-app-crop.webp" alt="Dating App Website Photo" class="top-3-projects__image">
+      </a>
       <div class="top-3-projects-detail">
-        <h4 class="heading-4 heading-4--light">Natours</h4>
-        <p class="top-3-projects__high-light">Advance CSS</p>
+        <a href="https://udemydatingapp.azurewebsites.net/" class="project-link" target="_blank"
+          rel="noopener">DatingApp</a>
+        <p class="top-3-projects__high-light">ANGULAR | .NET CORE</p>
       </div>
     </div>
   </div>
+  <!-- Top 3 Projects end -->
 
+  <!-- About Me start -->
   <div class="aboutme__intro" id="about">
     <h3 class="heading-2 heading-2--dark">About Me</h3>
     <p class="aboutme__intro__text">
@@ -107,34 +131,46 @@
       &rdquo; &dash; Jeremy Hammond
     </h4>
   </div>
+  <!-- About Me end -->
 
+  <!-- Contact Info start -->
   <div class="aboutme__contact-info">
     <h3 class="heading-2 heading-2--dark">Contact Me At:</h3>
+    <!-- LinkedIn -->
     <div class="aboutme__contact-info__section">
-      <a href="https://www.linkedin.com/in/nguyen-vu-hoang-nam-865226132" title="LinkedIn" target="_blank"><img
-          src="img/svg/linkedin.svg" alt="LinkedIn Icon" class="aboutme__contact-info__icon"></a>
+      <a href="https://www.linkedin.com/in/nguyen-vu-hoang-nam-865226132" title="LinkedIn" target="_blank"
+        rel="noopener"><img src="img/svg/linkedin.svg" alt="LinkedIn Icon" class="aboutme__contact-info__icon"></a>
       <a target="_blank" class="aboutme__contact-info__url" title="LinkedIn"
-        href="https://www.linkedin.com/in/nguyen-vu-hoang-nam-865226132">@LinkedIn: Nam Nguyen</a>
+        href="https://www.linkedin.com/in/nguyen-vu-hoang-nam-865226132" rel="noopener">@LinkedIn: Nam Nguyen</a>
     </div>
+
+    <!-- GMail -->
     <div class="aboutme__contact-info__section">
-      <a href="mailto:hoangnamnguyen191@gmail.com" title="Gmail" target="_blank">
+      <a href="mailto:hoangnamnguyen191@gmail.com" title="Gmail" target="_blank" rel="noopener">
         <img src="img/svg/gmail.svg" alt="GMail Icon" class="aboutme__contact-info__icon">
       </a>
-      <a target="_blank" class="aboutme__contact-info__url" title="Gmail" href="mailto:hoangnamnguyen191@gmail.com">@GMail:
+      <a target="_blank" class="aboutme__contact-info__url" title="Gmail" href="mailto:hoangnamnguyen191@gmail.com"
+        rel="noopener">@GMail:
         hoangnamnguyen191
       </a>
     </div>
+
+    <!-- GitHub -->
     <div class="aboutme__contact-info__section">
-      <a href="https://github.com/namnguyen191" title="GitHub" target="_blank">
+      <a href="https://github.com/namnguyen191" title="GitHub" target="_blank" rel="noopener">
         <img src="img/svg/github.svg" alt="GitHub Icon" class="aboutme__contact-info__icon">
       </a>
-      <a target="_blank" class="aboutme__contact-info__url" title="GitHub" href="https://github.com/namnguyen191">@GitHub:
+      <a target="_blank" class="aboutme__contact-info__url" title="GitHub" href="https://github.com/namnguyen191"
+        rel="noopener">@GitHub:
         namnguyen191
       </a>
     </div>
   </div>
+  <!-- Contact Info end -->
 
+  <!-- Stacks start -->
   <section class="skills" id="stacks">
+    <!-- Front-end -->
     <div class="feature-box">
       <img src="img/svg/front-end.svg" alt="front-end developer icon" class="feature-box__icon">
       <h3 class="heading-3 heading-3--dark">FRONT-END</h3>
@@ -151,6 +187,8 @@
         React & Redux | Angular
       </p>
     </div>
+
+    <!-- Back-end -->
     <div class="feature-box">
       <img src="img/svg/development.svg" alt="back-end developer icon" class="feature-box__icon">
       <h3 class="heading-3 heading-3--dark">BACK-END</h3>
@@ -167,6 +205,8 @@
         MVC | WEB API
       </p>
     </div>
+
+    <!-- Database -->
     <div class="feature-box">
       <img src="img/svg/database.svg" alt="database developer icon" class="feature-box__icon">
       <h3 class="heading-3 heading-3--dark">DATABASE</h3>
@@ -183,6 +223,8 @@
         SQL SERVER
       </p>
     </div>
+
+    <!-- DevOps -->
     <div class="feature-box">
       <img src="img/svg/deployment.svg" alt="Devops icon" class="feature-box__icon">
       <h3 class="heading-3 heading-3--dark">DEVOPS</h3>
@@ -200,10 +242,13 @@
       </p>
     </div>
   </section>
+  <!-- Stacks end -->
 
+  <!-- All Projects start -->
   <section class="all-projects" id="projects">
     <h1 class="all-projects__heading">Projects Portfolio</h1>
     <div class="projects">
+      <!-- Natours -->
       <div class="card">
         <div class="card__side card__side--front">
           <div class="card__picture card__picture--natour">
@@ -225,67 +270,157 @@
           <div class="card__cta">
             <div class="card__cta-detail">
               <p class="card__cta-desc">A simple Travel Website built using advance CSS techniques.</p>
-              <a href="http://www.udemynatoursproject.esy.es" title="Natours" class="card__cta-link card__cta-link-natour"
-                target="_blank">View Site</a>
+              <a href="http://www.udemynatoursproject.esy.es" title="Natours"
+                class="card__cta-link card__cta-link-natour" target="_blank" rel="noopener">View Site</a>
             </div>
-            <a href="#popup" class="btn btn--white">Demo</a>
+            <a href="https://github.com/namnguyen191/Natours" title="Natours GitHub Source Code"
+              class="github-link tooltip" target="_blank" rel="noopener">
+              <span style="line-height: 100%;"><i class="fab fa-github-square"></i></span>
+              <span class="tooltiptext">GitHub Source</span>
+            </a>
           </div>
         </div>
       </div>
+
+      <!-- Nexter -->
       <div class="card">
         <div class="card__side card__side--front">
-          <div class="card__picture card__picture--natour">
+          <div class="card__picture card__picture--nexter">
             &nbsp;
           </div>
           <h4 class="card__heading">
-            <span class="card__heading-span card__heading-span--natour">Natour Travel Website</span>
+            <span class="card__heading-span card__heading-span--nexter">Nexter Real Estate</span>
           </h4>
           <div class="card__details">
             <ul>
               <li>HTML</li>
               <li>CSS</li>
               <li>SASS</li>
-              <li>BOOTSTRAP</li>
+              <li>GRID</li>
             </ul>
           </div>
         </div>
-        <div class="card__side card__side--back card__side--back-natour">
+        <div class="card__side card__side--back card__side--back-nexter">
           <div class="card__cta">
             <div class="card__cta-detail">
-              <p class="card__cta-desc">A simple Travel Website built with HTML and CSS.</p>
-              <a href="http://www.udemynatoursproject.esy.es" class="card__cta-link card__cta-link-natour">View Site</a>
+              <p class="card__cta-desc">A simple Real Estate Website built using the power of CSS Grid</p>
+              <a href="http://udemynexterproject.esy.es/" title="Nexter" class="card__cta-link card__cta-link-nexter"
+                target="_blank" rel="noopener">View Site</a>
             </div>
-            <a href="#popup" class="btn btn--white">Demo</a>
+            <a href="https://github.com/namnguyen191/nexter" title="Nexter GitHub Source Code"
+              class="github-link tooltip" target="_blank" rel="noopener">
+              <span style="line-height: 100%;"><i class="fab fa-github-square"></i></span>
+              <span class="tooltiptext">GitHub Source</span>
+            </a>
           </div>
         </div>
       </div>
+
+      <!-- Trillio -->
       <div class="card">
         <div class="card__side card__side--front">
-          <div class="card__picture card__picture--natour">
+          <div class="card__picture card__picture--trillio">
             &nbsp;
           </div>
           <h4 class="card__heading">
-            <span class="card__heading-span card__heading-span--natour">Natour Travel Website</span>
+            <span class="card__heading-span card__heading-span--trillio">Trillio Travel Service</span>
           </h4>
           <div class="card__details">
             <ul>
               <li>HTML</li>
               <li>CSS</li>
               <li>SASS</li>
-              <li>BOOTSTRAP</li>
+              <li>FLEXBOX</li>
             </ul>
           </div>
         </div>
-        <div class="card__side card__side--back card__side--back-natour">
+        <div class="card__side card__side--back card__side--back-trillio">
           <div class="card__cta">
             <div class="card__cta-detail">
-              <p class="card__cta-desc">A simple Travel Website built using advance CSS.</p>
-              <a href="http://www.udemynatoursproject.esy.es" class="card__cta-link card__cta-link-natour">View Site</a>
+              <p class="card__cta-desc">A simple Travel Service Website built using Flexbox.</p>
+              <a href="http://udemytrillioproject.esy.es/" title="Trillio" class="card__cta-link card__cta-link-trillio"
+                target="_blank" rel="noopener">View Site</a>
             </div>
-            <a href="#popup" class="btn btn--white">Demo</a>
+            <a href="https://github.com/namnguyen191/Trillo" title="Trillio GitHub Source Code"
+              class="github-link tooltip" target="_blank" rel="noopener">
+              <span style="line-height: 100%;"><i class="fab fa-github-square"></i></span>
+              <span class="tooltiptext">GitHub Source</span>
+            </a>
           </div>
         </div>
       </div>
+
+      <!-- Sirvey -->
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--sirvey">
+            &nbsp;
+          </div>
+          <h4 class="card__heading">
+            <span class="card__heading-span card__heading-span--sirvey">Sirvey: Survey service</span>
+          </h4>
+          <div class="card__details">
+            <ul>
+              <li>React with Redux</li>
+              <li>Node with Express</li>
+              <li>MongoDB</li>
+              <li>Google OAuth</li>
+              <li>SendGrid | Stripe</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card__side card__side--back card__side--back-sirvey">
+          <div class="card__cta">
+            <div class="card__cta-detail">
+              <p class="card__cta-desc">A Single Page Application that provides Surveys sending service.</p>
+              <a href="https://reactsirvey.herokuapp.com/" title="Sirvey" class="card__cta-link card__cta-link-sirvey"
+                target="_blank" rel="noopener">View Site</a>
+            </div>
+            <a href="https://github.com/namnguyen191/react-survey-app" title="Sirvey GitHub Source Code"
+              class="github-link tooltip" target="_blank" rel="noopener">
+              <span style="line-height: 100%;"><i class="fab fa-github-square"></i></span>
+              <span class="tooltiptext">GitHub Source</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- DatingApp -->
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--datingapp">
+            &nbsp;
+          </div>
+          <h4 class="card__heading">
+            <span class="card__heading-span card__heading-span--datingapp">DatingApp: E-Date</span>
+          </h4>
+          <div class="card__details">
+            <ul>
+              <li>Angular</li>
+              <li>.Net Core API</li>
+              <li>MySQL</li>
+              <li>JWT Auth Token</li>
+              <li>Cloundinary</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card__side card__side--back card__side--back-datingapp">
+          <div class="card__cta">
+            <div class="card__cta-detail">
+              <p class="card__cta-desc">An online dating SPA that support online chat and image upload.</p>
+              <a href="https://udemydatingapp.azurewebsites.net/" title="DatingApp"
+                class="card__cta-link card__cta-link-datingapp" target="_blank" rel="noopener">View Site</a>
+            </div>
+            <a href="https://github.com/namnguyen191/DatingApp" title="DatingApp GitHub Source Code"
+              class="github-link tooltip" target="_blank" rel="noopener">
+              <span style="line-height: 100%;"><i class="fab fa-github-square"></i></span>
+              <span class="tooltiptext">GitHub Source</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- More -->
       <div class="card">
         <div class="card__side card__side--front card__side--front-more">
           <h3>And more to come</h3>
@@ -330,12 +465,15 @@
       </div>
     </div>
   </section>
+  <!-- All Projects end -->
 
+  <!-- Footer start -->
   <footer class="footer">
     <p class="copyright">
       &copy; 2020 by Nam Nguyen. All rights reserved. Free to use for learning purposes.
     </p>
   </footer>
+  <!-- Footer end -->
 
   <!-- Insert JS -->
   <script type="module" src="js/main.js"></script>
