Update projects website link
Change from hostinger to github page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <h3 class="heading-3 heading-3--dark">Top 3 projects</h3>
     <div class="top-3-projects__list">
       <!-- Natour -->
-      <a href="http://www.udemynatoursproject.esy.es/" title="Natours" target="_blank" rel="noopener">
+      <a href="https://namnguyen191.github.io/Natours/" title="Natours" target="_blank" rel="noopener">
         <img src="img/natour.webp" alt="Natours Website Photo" class="top-3-projects__image">
       </a>
       <div class="top-3-projects-detail">
@@ -270,7 +270,7 @@
           <div class="card__cta">
             <div class="card__cta-detail">
               <p class="card__cta-desc">A simple Travel Website built using advance CSS techniques.</p>
-              <a href="http://www.udemynatoursproject.esy.es" title="Natours"
+              <a href="https://namnguyen191.github.io/Natours/" title="Natours"
                 class="card__cta-link card__cta-link-natour" target="_blank" rel="noopener">View Site</a>
             </div>
             <a href="https://github.com/namnguyen191/Natours" title="Natours GitHub Source Code"
@@ -304,7 +304,7 @@
           <div class="card__cta">
             <div class="card__cta-detail">
               <p class="card__cta-desc">A simple Real Estate Website built using the power of CSS Grid</p>
-              <a href="http://udemynexterproject.esy.es/" title="Nexter" class="card__cta-link card__cta-link-nexter"
+              <a href="https://namnguyen191.github.io/nexter/" title="Nexter" class="card__cta-link card__cta-link-nexter"
                 target="_blank" rel="noopener">View Site</a>
             </div>
             <a href="https://github.com/namnguyen191/nexter" title="Nexter GitHub Source Code"
@@ -338,7 +338,7 @@
           <div class="card__cta">
             <div class="card__cta-detail">
               <p class="card__cta-desc">A simple Travel Service Website built using Flexbox.</p>
-              <a href="http://udemytrillioproject.esy.es/" title="Trillio" class="card__cta-link card__cta-link-trillio"
+              <a href="https://namnguyen191.github.io/Trillo/" title="Trillio" class="card__cta-link card__cta-link-trillio"
                 target="_blank" rel="noopener">View Site</a>
             </div>
             <a href="https://github.com/namnguyen191/Trillo" title="Trillio GitHub Source Code"
